# zoomattender

./: Cargo.toml  README-EN.md  README.md  package-lock.json  package.json  resp.json  tauri.client.conf.json  tauri.conf.json  tauri.watch.conf.json
gui/: package-lock.json  package.json
gui/src/: App.tsx  BackendHelpers.ts  CommonElement.tsx  EditTaskWindow.tsx  EnterGroupFrame.tsx  EnterZoomLanguageFrame.tsx  FinishSetup.tsx  InitialSetupWindow.tsx  JsonSchemas.ts  Main.tsx  Menu.tsx  NotAllTasksModal.tsx  SettingsWindow.tsx  Strings.ts  TasksTable.tsx  WatchRejoinConfirm.tsx  index.css
src/: args.rs  consts.rs  lib.rs  main.rs  resp.json  scheduler.rs  watchdog.rs  window.rs
src/client/: default_settings.json  dt.rs  errors.rs  gui.rs  local_fs.rs  local_tasks.rs  main.rs  mappings.rs  pref_variants.rs  scheduler.rs  settings.rs  task.rs  tasks.rs
src/client/mappings/: api_response.rs  local_tasks.rs  mod.rs  settings.rs  tasks.rs
src/impls/: mod.rs  task.rs
src/mappings/: events.rs  local_tasks.rs  mod.rs  pref_variants.rs  settings.rs  tasks.rs  windnames.rs
src/watch/: example.json  fmtstring.rs  gui.rs  main.rs  resp.json  watchdog.rs  zoom.rs
