[package]
name = "zoomattender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "watch"
path = "src/watch/main.rs"

[dependencies]

[dependencies.windows]
version = "0.34.0"
features = [
    "alloc",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_Com",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Ole",
    "Win32_System_TaskScheduler",
    "Win32_Security"
]