[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "client"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "watch"
path = "src/watch/main.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-rc.5", features = [] }

[dependencies]
tauri = { version = "1.0.0-rc.5", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "3.1.6", features = ["derive"] }
handlebars = "4.2.2"
lazy_static = "1.4.0"
winrt-notification = "0.5.1"
reqwest = { version = "0.11", features = ["blocking"] }
chrono = "0.4.19"
shlex = "1.1.0"

[dependencies.windows]
version = "0.34.0"
features = [
    "alloc",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_Com",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Ole",
    "Win32_System_TaskScheduler",
    "Win32_Security"
]

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
